Bug 566637 - TM: "this.a" reads from stale global object slots after global variable "a" changes value. r=gal.