js/src/trace-test/tests/basic/bug566637.js
@@ -1,0 +1,5 @@
+for (var j = 0; j < 9; j++) {
+    var a = j;
+    var b = this.a;
+}
+assertEq(b, 8);
